--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             </div>
             <div class="trust-sep">/</div>
             <div class="trust-item">
-              <span class="trust-value">5+</span>
+              <span class="trust-value">2+</span>
               <span class="trust-label">Years</span>
             </div>
           </div>
@@ -361,6 +361,7 @@
             <span class="text-item">UI | UX Designer</span
             ><span class="text-item has__heighlight--clr">Web Developer</span
             ><span class="text-item">Graphics Designer</span>
+            <span class="text-item has__heighlight--clr">Shopify Expert</span>
           </div>
         </div>
       </section>
@@ -402,6 +403,13 @@
                   marketing assets that distinguish you from competitors.
                 </p>
               </div>
+              <div class="right-box">
+                <h3 class="has__heighlight--clr">Shopify Development</h3>
+                <p class="has_splitting--effect">
+                  Custom themes and seamless e-commerce setups. I build stores
+                  that convert visitors into loyal customers.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -427,6 +435,26 @@
             </div>
 
             <div class="project-list">
+              <div
+                class="project-list__item"
+                data-img="./assets/images/tst-mockup.webp"
+              >
+                <a
+                  href="https://theshoetales.com/"
+                  target="_blank"
+                  class="project-list__link"
+                >
+                  <span class="project-list__name">THE SHOE TALES</span>
+                  <span class="project-list__type">Website</span>
+                  <span class="project-list__industry">Footwear Company</span>
+                  <span class="project-list__year">2025</span>
+                  <img
+                    src="./assets/images/tst-mockup.webp"
+                    alt="The Shoe Tales Thumbnail"
+                    class="project-list__mobile-img"
+                  />
+                </a>
+              </div>
               <div
                 class="project-list__item"
                 data-img="./assets/images/ovaclone.webp"
@@ -1149,7 +1177,7 @@
               <div class="faq-accordion">
                 <div class="faq-item active">
                   <button class="faq-question active">
-                    <span>What is 3D floor plan rendering?</span>
+                    <span>What is your typical timeline?</span>
                     <svg
                       class="chevron"
                       viewBox="0 0 24 24"
@@ -1164,38 +1192,6 @@
                   </button>
                   <div class="faq-answer" style="height: auto">
                     <p style="opacity: 1; transform: translateY(0)">
-                      A 3D floor plan rendering is a three-dimensional,
-                      bird's-eye-view visual representation of a building's
-                      layout that adds depth and realism. It's used in
-                      architecture and real estate to help visualize and plan
-                      interior spaces. These renderings provide a lifelike view
-                      of the area, featuring details like furnishings and
-                      lighting, making them invaluable for design and marketing
-                      purposes. They aid architects and interior designers in
-                      experimenting with different layouts, and in the real
-                      estate industry, they're used to showcase properties to
-                      potential buyers or renters.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="faq-item">
-                  <button class="faq-question">
-                    <span>Why do I need a 3D floor layout?</span>
-                    <svg
-                      class="chevron"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    >
-                      <polyline points="6 9 12 15 18 9"></polyline>
-                    </svg>
-                  </button>
-                  <div class="faq-answer">
-                    <p>
                       Most standard websites take 2-4 weeks. Complex web apps
                       may take 4-8 weeks depending on requirements.
                     </p>
@@ -1204,10 +1200,7 @@
 
                 <div class="faq-item">
                   <button class="faq-question">
-                    <span
-                      >What is the process like in creating a 3D floor
-                      plan?</span
-                    >
+                    <span>Do you provide SEO services?</span>
                     <svg
                       class="chevron"
                       viewBox="0 0 24 24"
@@ -1222,7 +1215,7 @@
                   </button>
                   <div class="faq-answer">
                     <p>
-                      Yes! innovative on-page SEO best practices are built into
+                      Yes! Innovative on-page SEO best practices are built into
                       every website I create to ensure you rank well.
                     </p>
                   </div>
@@ -1230,7 +1223,7 @@
 
                 <div class="faq-item">
                   <button class="faq-question">
-                    <span>How much does a 3D floor plan cost?</span>
+                    <span>Will I be able to update the site myself?</span>
                     <svg
                       class="chevron"
                       viewBox="0 0 24 24"
@@ -1247,6 +1240,52 @@
                     <p>
                       Absolutely. I can build with a CMS (like WordPress or
                       headless CMS) so you can easily manage content.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="faq-item">
+                  <button class="faq-question">
+                    <span>Do you build custom web applications?</span>
+                    <svg
+                      class="chevron"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                  </button>
+                  <div class="faq-answer">
+                    <p>
+                      Yes, I specialize in building custom web applications
+                      using React, Next.js, and other modern technologies.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="faq-item">
+                  <button class="faq-question">
+                    <span>Can you help with Shopify stores?</span>
+                    <svg
+                      class="chevron"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                  </button>
+                  <div class="faq-answer">
+                    <p>
+                      Yes, I provide full Shopify theme customization, setup,
+                      and performance optimization for e-commerce brands.
                     </p>
                   </div>
                 </div>
